add_subdirectory(App)
if (PICO_INF_ENABLE_BLE)
    add_subdirectory(Ble)
endif()
add_subdirectory(Compiler)
add_subdirectory(GPS)
if (PICO_INF_ENABLE_JERRYSCRIPT)
    add_subdirectory(JerryScript)
endif()
# add_subdirectory(Motor)
add_subdirectory(Sensor)
add_subdirectory(Signal)
add_subdirectory(WSPR)